nicer introduction to p10

--- a/content/prototypes/p10.md
+++ b/content/prototypes/p10.md
@@ -14,7 +14,20 @@ components:
 - sgr3
 ---
 
-This basically {{% link "p8" %}} with minor bug fixes, higher amplification gain, an optional power LED, and easier assembly.  See its description for more information.
+An EMG neural interface with the following features:
+
+- Modular:
+    - A power module with [Arduino microcontroller](https://store.arduino.cc/products/arduino-nano-33-ble), battery, and power converter
+    - 1-8 (typically 2) electrode modules with up to 4 electrode pairs each
+    - Connected via standard 2.54mm (0.1 inch) dupont connectors
+- Sampling rate of up to 500Hz, 8-bit resolution, max 8 signals
+- Supports up to 17 electrodes total: 8 signal electrode pairs + 1 ground electrode
+- Battery-powered (1x AAA battery, 1.2V, ~6h of usage)
+- Wireless, using Bluetooth Low Energy (BLE)
+- AI-based gesture prediction and keyboard emulation (see {{% link "s3" %}})
+- [GNURadio](https://www.gnuradio.org/) integration for plotting the raw signals + FFT
+
+## Changelog
 
 Changes compared to {{% link "p9.2" %}}:
 
