--- a/content/blog/2023-05-31-p10.md
+++ b/content/blog/2023-05-31-p10.md
@@ -3,25 +3,24 @@ title: "Prototype 10"
 slug: prototype10
 date: 2023-05-31
 author: Roman
-draft: true
 ---
 
 I'm excited to announce that we reached the double digits with {{% link "p10" %}}! 🥳
 
-As the most advanced prototype so far, it's more comfortable, more sensitive,
-and cheaper than any of the prototypes before (if we don't count the
-super-cheap early prototypes that don't use any amplifiers.)
+As the most advanced prototype so far, it's more comfortable, more sensitive, and cheaper than any of the prototypes before (if we don't count the super-cheap early prototypes that don't use any amplifiers.)
 
 The three big changes are:
 
-1. {{% link "enhancedsignal" %}} by optimizing the passive high-pass filter before the amplifiers, as described in the previous blog post. (thanks Farzam!)
-2. More comfortable rounded "dome nut" electrodes
-3. Switched to cheaper [Arduino Nano 33 BLE](https://store.arduino.cc/products/arduino-nano-33-ble) (without the extra sensors of the "Sense" model, which were actually not needed anyway)
+1. {{% link "enhancedsignal" %}} by optimizing the passive high-pass filter before the amplifiers, as described in the previous blog post. See {{% link "c10.3" %}}. (thanks Farzam!)
+2. Switched to cheaper [Arduino Nano 33 BLE](https://store.arduino.cc/products/arduino-nano-33-ble) (without the extra sensors of the "Sense" model, which were actually not needed anyway)
+3. More comfortable rounded "dome nut" electrodes, as you can see on this photograph:
+
+[![Photograph of the Prototype 10](/img/prototypes/p10.jpg)](/img/prototypes/p10.jpg)
 
 Along with this release, I have cleaned up the [schematics folder in the git repository.](https://codeberg.org/psylink/psylink/src/branch/master/schematics) and upgraded from KiCad 5 to 6.  It should now be much easier for you to open/edit the PCBs/circuits. (Thanks AntonX!)
 
-By the way, [PCBWay](https://www.pcbway.com/) kindly helped out with the PCB prototyping costs.  It was my first time that I ordered pre-assembled PCBs and so, of course, I made some mistakes with the order, but PCBWay quickly reached out to me, multiple times & free of charge, to fix my mistakes and make sure that they deliver exactly what I wanted.  That sure takes off some pressure from experimenting with new technologies :)  Maybe it's finally time to make some custom electrodes with PCBWay's metalworking services.
+By the way, [PCBWay](https://www.pcbway.com/) kindly helped out by sponsoring their services, and I gave it a try and ordered pre-assembled PCBs. I never did that before, and of course, I made a bunch of mistakes with the order, but fortunately they quickly reached out to me, free of charge, and we fixed my mistakes before they went into production.  I was very happy with the results and got exactly what I wanted on the first try.  This kind of hand-holding sure takes off some pressure from experimenting with new technologies :)  PCBWay also offers metalworking services, maybe it's finally time to dive into that and order some custom electrodes!
 
-I hope you're also enjoying the continuous improvements I'm making to the website design, such as the rounded corners on the blog posts, and the separator gaps between them.
+I hope you're also enjoying the continuous improvements I'm making to the website design, such as the rounded corners on the blog posts (only when more than one post is visible), the separator gaps between them.
 
 Thanks to everyone who contributed ideas, code, financial support, and anything else to this project.  For this release, it's especially [Farzam Khodajoo](https://www.linkedin.com/in/farzam-khodajoo) and [AntonX](https://www.linkedin.com/in/anton-x/). We wouldn't have made it this far without you.  Stay tuned for more updates! :)
