fix gain resistor in circuit c10.3 (now c10.4)

--- a/content/prototypes/p10.md
+++ b/content/prototypes/p10.md
@@ -7,7 +7,7 @@ tested: true
 components:
 - bp4.2
 - b3.2
-- c10.3
+- c10.4
 - c12.1
 - sabt1.2
 - s3
@@ -32,6 +32,7 @@ An EMG neural interface with the following features:
 Changes compared to {{% link "p9.2" %}}:
 
 - Fixed aggressive filtering of signals by changing passive highpass filter capacitors C1-C8 from 100pF to 100nF.  (This was covered in a [blog post](https://psylink.me/blog/enhancedsignal/))
+- Changed the gain for all amplifiers to 251x. (Some amplifiers had a gain of 501x due to a sensitivity bug, this is not necessary anymore.)
 - Replaced the [Arduino Nano 33 BLE Sense](https://store.arduino.cc/products/arduino-nano-33-ble-sense) with a [Arduino Nano 33 BLE](https://store.arduino.cc/products/arduino-nano-33-ble), since it has all required features at ~66% of the cost
 - Replaced uncomfortable spacer screw electrodes with rounded dome nuts
 
