fix links to p10

--- a/content/boards/b3.2.md
+++ b/content/boards/b3.2.md
@@ -4,10 +4,10 @@ slug: b3.2
 image: boards/b3.2.png
 image_back: boards/b3.2_back.png
 date: 2022-01-26
-prototypes: ["p9.2"]
+prototypes: ["p9.2", "p10"]
 tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/electrode_module3.2
-circuit: c10.2
+circuit: c10.4
 priority: 1
 ---
 
