--- a/content/circuits/c12.1.md
+++ b/content/circuits/c12.1.md
@@ -4,7 +4,7 @@ slug: c12.1
 image: circuits/c12.1.png
 date: 2022-01-26
 boards: ["bp4.2"]
-prototypes: ["p9.2"]
+prototypes: ["p9.2", "p10"]
 tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/power_module4.2/power_module4.2.kicad_sch
 priority: 1
